--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
 
 subprojects {
     group = 'org.megamek'
-    version = '0.46.0-SNAPSHOT'
+    version = '0.46.0-rc.2'
 }
 
 ext {
