--- a/MekHQ/resources/mekhq/resources/MekHQ.properties
+++ b/MekHQ/resources/mekhq/resources/MekHQ.properties
@@ -2,7 +2,7 @@
 
 Application.name = MekHQ
 Application.title = MekHQ
-Application.version = 0.46.0-rc.2
+Application.version = 0.46.0
 Application.vendor= MekHQ Project
 Application.homepage=https://github.com/MegaMek
 Application.description = A program for managing BattleTech campaigns played via MegaMek or tabletop
