display satellite information for each planet

--- a/MekHQ/resources/mekhq/resources/PlanetViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PlanetViewPanel.properties
@@ -3,7 +3,7 @@ lblPlanetaryType1.text=<html><b>Planet Type:</b></html>
 lblJumpPoint1.text=<html><b>Time to Jump Point:</b></html>
 lblYear1.text=<html><b>Year length:</b></html>
 lblDay1.text=<html><b>Day length:</b></html>
-lblSatellite1.text=<html><b>Number of Satellites:</b></html>
+lblSatellite1.text=<html><b>Satellites:</b></html>
 lblGravity1.text=<html><b>Surface Gravity:</b></html>
 lblPressure1.text=<html><b>Atmospheric Pressure:</b></html>
 lblRecharge1.text=<html><b>Recharging Station:</b></html>
