cleanup and tokenization

--- a/MekHQ/resources/mekhq/resources/AtBScenarioBuiltIn.properties
+++ b/MekHQ/resources/mekhq/resources/AtBScenarioBuiltIn.properties
@@ -72,3 +72,19 @@ battleDetails.pirateFreeForAll.specialConditions=12 Meks designated enemy deploy
 battleDetails.pirateFreeForAll.victory=Must destroy 50% of both enemy and pirates while keeping 50% of own force alive.
 battleDetails.pirateFreeForAll.observations=Winner controls the battlefield after the battle.
 
+commonObjectives.preserveEmployerUnits.text=The following unit(s) deployed by your employer must survive. Each one destroyed results in a 1 point penalty to your contract score:
+commonObjectives.preserveFriendlyUnits.text=Ensure that at least %d%s individual units from the following force(s) and unit(s) survive:
+commonObjectives.forceWithdraw.text=Destroy, cripple or force the withdrawal of at least %d%% of the following enemy force(s):
+commonObjectives.preventBreakthrough.text=Prevent at least %d%% of the following enemy force(s) from reaching the %s edge:
+commonObjectives.breakthrough.text=Reach the %s edge with at least %d%% of the following player and attached units and allied force(s):
+commonObjectives.bonusRolls.text=%d bonus roll per surviving unit
+commonObjectives.timeLimit.text=Time limit: %d turns
+commonObjectives.battlefieldControl=Grants battlefield control
+
+battleDetails.reconRaid.name=Recon Raid
+battleDetails.reconRaid.instructions.oppositeEdge=With one unit: move to %s map edge.
+battleDetails.reconRaid.instructions.stayStill=Remain stationary for two turns.
+battleDetails.reconRaid.instructions.returnEdge=Return to %s map edge.
+battleDetails.reconRaid.instructions.reward=1d6-2 bonus rolls if victorious.
+
+battleDetails.starLeagueCache.Mek=Star League Mek
