atmosphere and composition added to planetary display

--- a/MekHQ/resources/mekhq/resources/PlanetViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PlanetViewPanel.properties
@@ -9,6 +9,8 @@ lblPressure1.text=<html><b>Atmospheric Pressure:</b></html>
 lblRecharge1.text=<html><b>Recharging Station:</b></html>
 lblTemp1.text=<html><b>Equatorial Temperature:</b></html>
 lblWater1.text=<html><b>Surface Water:</b></html>
+lblAtmosphere.text=<html><b>Atmosphere:</b></html>
+lblComposition.text=<html><b>Atmospheric Composition:</b></html>
 lblAnimal1.text=<html><b>Highest Native Life:</b></html>
 lblLandMass1.text=<html><b>Landmasses (Capital City):</b></html>
 lblHPG1.text=<html><b>HPG Class Type:</b></html>
