--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -23,6 +23,8 @@ lblSpouse1.text=<html><b>Spouse:</b></html>;
 lblChildren1.text=<html><b>Children:</b></html>;
 missionLog.title=Mission Log
 pnlInjuries.title=Injury Report
+pnlSkills.title=Skills and Abilities
+pnlFamily.title=Family Information
 pnlDescription.title=Description
 pnlLog.title=Personnel Log
 pnlKills.title=Kill Record
