put border and title around awards and medals and moved lower

--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -24,6 +24,7 @@ lblChildren1.text=<html><b>Children:</b></html>;
 missionLog.title=Mission Log
 pnlInjuries.title=Injury Report
 pnlSkills.title=Skills and Abilities
+pnlAwards.title=Medals and Awards
 pnlFamily.title=Family Information
 pnlDescription.title=Description
 pnlLog.title=Personnel Log
