changed title from Description to Biography in person view panel

--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -26,7 +26,7 @@ pnlInjuries.title=Injury Report
 pnlSkills.title=Skills and Abilities
 pnlAwards.title=Medals and Awards
 pnlFamily.title=Family Information
-pnlDescription.title=Description
+pnlDescription.title=Biography
 pnlLog.title=Personnel Log
 pnlKills.title=Kill Record
 lblPermanentInjury.text= permanent injury
