force no line break on title labels in view panels

--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -1,26 +1,26 @@
-lblCall1.text=<html><b>Callsign:</b></html>;
-lblBackground1.text=<html><b>Background:</b></html>;
-lblAge1.text=<html><b>Age:</b></html>;
-lblGender1.text=<html><b>Gender:</b></html>;
-lblStatus1.text=<html><b>Status:</b></html>;
-lblOrigin1.text=<html><b>Origin:</b></html>;
-lblRecruited1.text=<html><b>Recruited:</b></html>;
-lblTimeServed1.text=<html><b>Time in Service:</b></html>;
-lblDuedate1.text=<html><b>Due Date:</b></html>;
-lblGun1.text=<html><b>Gunnery:</b></html>;
-lblPilot1.text=<html><b>Piloting:</b></html>;
-lblArty1.text=<html><b>Artillery:</b></html>;
-lblTactics1.text=<html><b>Tactics:</b></html>;
-lblInit1.text=<html><b>Init Bonus:</b></html>;
-lblTough1.text=<html><b>Toughness:</b></html>;
-lblAbility1.text=<html><b>Abilities:</b></html>;
-lblImplants1.text=<html><b>Implants:</b></html>;
-lblAdvancedMedical1.text=<html><b>Injury Penalties:</b></html>;
-lblInjuries.text=<html><b>Injuries:</b></html>;
-lblEdge1.text=<html><b>Edge:</b></html>;
-lblEdgeAvail1.text=<html><b>Edge Available:</b></html>;
-lblSpouse1.text=<html><b>Spouse:</b></html>;
-lblChildren1.text=<html><b>Children:</b></html>;
+lblCall1.text=<html><nobr><b>Callsign:</b></nobr></html>;
+lblBackground1.text=<html><nobr><b>Background:</b></nobr></html>;
+lblAge1.text=<html><nobr><b>Age:</b></nobr></html>;
+lblGender1.text=<html><nobr><b>Gender:</b></nobr></html>;
+lblStatus1.text=<html><nobr><b>Status:</b></nobr></html>;
+lblOrigin1.text=<html><nobr><b>Origin:</b></nobr></html>;
+lblRecruited1.text=<html><nobr><b>Recruited:</b></nobr></html>;
+lblTimeServed1.text=<html><nobr><b>Time in Service:</b></nobr></html>;
+lblDuedate1.text=<html><nobr><b>Due Date:</b></nobr></html>;
+lblGun1.text=<html><nobr><b>Gunnery:</b></nobr></html>;
+lblPilot1.text=<html><nobr><b>Piloting:</b></nobr></html>;
+lblArty1.text=<html><nobr><b>Artillery:</b></nobr></html>;
+lblTactics1.text=<html><nobr><b>Tactics:</b></nobr></html>;
+lblInit1.text=<html><nobr><b>Init Bonus:</b></nobr></html>;
+lblTough1.text=<html><nobr><b>Toughness:</b></nobr></html>;
+lblAbility1.text=<html><nobr><b>Abilities:</b></nobr></html>;
+lblImplants1.text=<html><nobr><b>Implants:</b></nobr></html>;
+lblAdvancedMedical1.text=<html><nobr><b>Injury Penalties:</b></nobr></html>;
+lblInjuries.text=<html><nobr><b>Injuries:</b></nobr></html>;
+lblEdge1.text=<html><nobr><b>Edge:</b></nobr></html>;
+lblEdgeAvail1.text=<html><nobr><b>Edge Available:</b></nobr></html>;
+lblSpouse1.text=<html><nobr><b>Spouse:</b></nobr></html>;
+lblChildren1.text=<html><nobr><b>Children:</b></nobr></html>;
 missionLog.title=Mission Log
 pnlInjuries.title=Injury Report
 pnlSkills.title=Skills and Abilities
