--- a/MekHQ/resources/mekhq/resources/ContractViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/ContractViewPanel.properties
@@ -1,24 +1,24 @@
-lblEmployer.text=<html><b>Employer:</b></html>
-lblLocation.text=<html><b>Location:</b></html>
-lblType.text=<html><b>Mission Type:</b></html>
-lblStartDate.text=<html><b>Start Date:</b></html>
-lblEndDate.text=<html><b>End Date:</b></html>
-lblPayout.text=<html><b>Monthly Payout:</b></html>
-lblCommand.text=<html><b>Command Rights:</b></html>
-lblBLC.text=<html><b>Battle Loss Compensation:</b></html>
-lblSalvageValueMerc.text=<html><b>Total Value Salvaged (Mercs):</b></html>
-lblSalvageValueEmployer.text=<html><b>Total Value Salvaged (Employer):</b></html>
-lblSalvagePct.text=<html><b>Salvage Percentage:</b></html>
-lblSalvage.text=<html><b>Salvage Rights:</b></html>
+lblEmployer.text=<html><nobr><b>Employer:</b></nobr></html>
+lblLocation.text=<html><nobr><b>Location:</b></nobr></html>
+lblType.text=<html><nobr><b>Mission Type:</b></nobr></html>
+lblStartDate.text=<html><nobr><b>Start Date:</b></nobr></html>
+lblEndDate.text=<html><nobr><b>End Date:</b></nobr></html>
+lblPayout.text=<html><nobr><b>Monthly Payout:</b></nobr></html>
+lblCommand.text=<html><nobr><b>Command Rights:</b></nobr></html>
+lblBLC.text=<html><nobr><b>Battle Loss Compensation:</b></nobr></html>
+lblSalvageValueMerc.text=<html><nobr><b>Total Value Salvaged (Mercs):</b></nobr></html>
+lblSalvageValueEmployer.text=<html><nobr><b>Total Value Salvaged (Employer):</b></nobr></html>
+lblSalvagePct.text=<html><nobr><b>Salvage Percentage:</b></nobr></html>
+lblSalvage.text=<html><nobr><b>Salvage Rights:</b></nobr></html>
 exchange=Exchange
 none=None
 
-lblEnemy.text=<html><b>Enemy:</b></html>
-lblAllyRating.text=<html><b>Ally Rating:</b></html>
-lblEnemyRating.text=<html><b>Enemy Rating:</b></html>
-lblMorale.text=<html><b>Enemy Morale:</b></html>
-lblScore.text=<html><b>Contract Score:</b></html>
-lblDistance.text=<html><b>Days (Jumps) to Location:</b></html>
-lblOverhead.text=<html><b>Overhead Compensation:</b></html>
-lblSupport.text=<html><b>StraightSupport:</b></html>
-lblSharePct.text=<html><b>Shares:</b></html>
+lblEnemy.text=<html><nobr><b>Enemy:</b></nobr></html>
+lblAllyRating.text=<html><nobr><b>Ally Rating:</b></nobr></html>
+lblEnemyRating.text=<html><nobr><b>Enemy Rating:</b></nobr></html>
+lblMorale.text=<html><nobr><b>Enemy Morale:</b></nobr></html>
+lblScore.text=<html><nobr><b>Contract Score:</b></nobr></html>
+lblDistance.text=<html><nobr><b>Days (Jumps) to Location:</b></nobr></html>
+lblOverhead.text=<html><nobr><b>Overhead Compensation:</b></nobr></html>
+lblSupport.text=<html><nobr><b>StraightSupport:</b></nobr></html>
+lblSharePct.text=<html><nobr><b>Shares:</b></nobr></html>
