--- a/MekHQ/resources/mekhq/resources/ForceViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/ForceViewPanel.properties
@@ -1,9 +1,9 @@
-lblBV1.text=<html><b>BV:</b></html>
-lblCost1.text=<html><b>Cost:</b></html>
-lblTonnage1.text=<html><b>Tonnage:</b></html>
-lblAssign1.text=<html><b>Assigned to:</b></html>
-lblTech1.text=<html><b>Assigned Tech:</b></html>
-lblCommander1.text=<html><b>Commanding Officer:</b></html>
+lblBV1.text=<html><nobr><b>BV:</b></nobr></html>
+lblCost1.text=<html><nobr><b>Cost:</b></nobr></html>
+lblTonnage1.text=<html><nobr><b>Tonnage:</b></nobr></html>
+lblAssign1.text=<html><nobr><b>Assigned to:</b></nobr></html>
+lblTech1.text=<html><nobr><b>Assigned Tech:</b></nobr></html>
+lblCommander1.text=<html><nobr><b>Commanding Officer:</b></nobr></html>
 mixed=Mixed
 unit=Unit
 tonnageToolTip.text=<html>1........Ultra Light...39<br>40......Light............130<br>131....Medium......200<br>201....Heavy..........280<br>281....Assault........380<br>381+..Super Heavy.......</html>
