--- a/MekHQ/resources/mekhq/resources/UnitViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/UnitViewPanel.properties
@@ -4,8 +4,8 @@ txtReadout.font=Monospaced-Plain-12
 txtFluff.contentType=text/html
 #NOI18N
 txtFluff.font=Monospaced-Plain-12
-lblTech1.text=<html><b>Tech Base:</b></html>
-lblTonnage1.text=<html><b>Tonnage:</b></html>
-lblBV1.text=<html><b>BV:</b></html>
-lblCost1.text=<html><b>Cost:</b></html>
-lblQuirk1.text=<html><b>Quirks:</b></html>
+lblTech1.text=<html><nobr><b>Tech Base:</b></nobr></html>
+lblTonnage1.text=<html><nobr><b>Tonnage:</b></nobr></html>
+lblBV1.text=<html><nobr><b>BV:</b></nobr></html>
+lblCost1.text=<html><nobr><b>Cost:</b></nobr></html>
+lblQuirk1.text=<html><nobr><b>Quirks:</b></nobr></html>
