forgot addition to customize mission dialog properties

--- a/MekHQ/resources/mekhq/resources/CustomizeMissionDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CustomizeMissionDialog.properties
@@ -5,3 +5,4 @@ lblType.text=Mission Type
 lblPlanetName.text=Location
 title=Customize Mission
 title.new=New Mission
+txtDesc.title=Mission Description
