--- a/MekHQ/resources/mekhq/resources/JumpPathViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/JumpPathViewPanel.properties
@@ -1,6 +1,6 @@
-lblJumps1.text=<html><b>Total jumps:</b></html>
-lblTimeStart1.text=<html><b>Transit Time (Start):</b></html>
-lblTimeEnd1.text=<html><b>Transit Time (End):</b></html>
-lblRechargeTime1.text=<html><b>Total Recharge Time:</b></html>
-lblTotalTime1.text=<html><b>Total Time:</b></html>
-lblCost1.text=<html><b>Total Cost:</b></html>
+lblJumps1.text=<html><nobr><b>Total jumps:</b></nobr></html>
+lblTimeStart1.text=<html><nobr><b>Transit Time (Start):</b></nobr></html>
+lblTimeEnd1.text=<html><nobr><b>Transit Time (End):</b></nobr></html>
+lblRechargeTime1.text=<html><nobr><b>Total Recharge Time:</b></nobr></html>
+lblTotalTime1.text=<html><nobr><b>Total Time:</b></nobr></html>
+lblCost1.text=<html><nobr><b>Total Cost:</b></nobr></html>
