added diameter to planet view panel

--- a/MekHQ/resources/mekhq/resources/PlanetViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PlanetViewPanel.properties
@@ -16,6 +16,7 @@ lblLandMass1.text=<html><nobr><b>Landmasses (Capital City):</b></nobr></html>
 lblHPG1.text=<html><nobr><b>HPG Class Type:</b></nobr></html>
 lblSocioIndustrial1.text=<html><nobr><b>Socio-Industrial Levels:</b></nobr></html>
 lblPosition.text=<html><nobr><b>Position in System:</b></nobr></html>
+lblDiameter.text=<html><nobr><b>Diameter:</b></nobr></html>
 lblPopulation.text=<html><nobr><b>Population:</b></html>
 lblGovernment.text=<html><nobr><b>Government:</b></html>
 primaryPlanet.text=(Primary Planet)
