What's 100mil between friends? #1354

--- a/MekHQ/resources/mekhq/resources/NewLoanDialog.properties
+++ b/MekHQ/resources/mekhq/resources/NewLoanDialog.properties
@@ -8,10 +8,12 @@ lblAnnualInterest.text=Annual Interest:
 lblCollateral.text=Collateral:
 lblLengthYears.text=Length (years):
 lblPaymentSchedule.text=Payment Schedule:
-btnPlus10mil.text=+10mil
-btnMinus10mil.text=-10mil
-btnPlus1mil.text=+1mil
-btnMinus1mil.text=-1mil
+btnPlus100mil.text=+100M
+btnMinus100mil.text=-100M
+btnPlus10mil.text=+10M
+btnMinus10mil.text=-10M
+btnPlus1mil.text=+1M
+btnMinus1mil.text=-1M
 btnPlus100k.text=+100K
 btnMinus100k.text=-100K
 btnPlus10k.text=+10K
