--- a/MekHQ/resources/mekhq/resources/AtBScenarioBuiltIn.properties
+++ b/MekHQ/resources/mekhq/resources/AtBScenarioBuiltIn.properties
@@ -95,3 +95,6 @@ battleDetails.baseAttack.attacker.details.winnerDefendTraining=Completing this o
 battleDetails.baseAttack.attacker.details.loser=Losing this battle will end the contract with an early defeat.
 
 battleDetails.starLeagueCache.Mek=Star League Mek
+
+battleDetails.deploySingleMek=Use the TO&E interface to deploy a single unit to this scenario.\n\n
+battleDetails.deployEightMeks=Use the TO&E interface to deploy up to eight units (or forces containing up to eight units) to this scenario.\n\n
