Add re-randomization of origin to New Recruit Dialog

--- a/MekHQ/resources/mekhq/resources/NewRecruitDialog.properties
+++ b/MekHQ/resources/mekhq/resources/NewRecruitDialog.properties
@@ -3,6 +3,7 @@ Form.title=Hire Personnel
 btnClose.text=Close
 btnRandomName.text=Randomize Name
 btnRandomPortrait.text=Randomize Portrait
+btnRandomOrigin.text=Randomize Origin
 btnChoosePortrait.text=Choose Portrait
 btnEditPerson.text=Edit Statistics (GM)
 btnRegenerate.text=Regenerate (GM)
