1405: Added Mother and Father links in Personnel tab

--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -21,6 +21,8 @@ lblEdge1.text=<html><nobr><b>Edge:</b></nobr></html>;
 lblEdgeAvail1.text=<html><nobr><b>Edge Available:</b></nobr></html>;
 lblSpouse1.text=<html><nobr><b>Spouse:</b></nobr></html>;
 lblChildren1.text=<html><nobr><b>Children:</b></nobr></html>;
+lblFather1.text=<html><nobr><b>Father:</b></nobr></html>;
+lblMother1.text=<html><nobr><b>Mother:</b></nobr></html>;
 missionLog.title=Mission Log
 pnlInjuries.title=Injury Report
 pnlSkills.title=Skills and Abilities
