--- a/MekHQ/build.gradle
+++ b/MekHQ/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'org.apache.commons:commons-text:1.4'
     implementation 'org.apache.commons:commons-csv:1.4'
     implementation 'javax.vecmath:vecmath:1.5.2'
+    implementation 'com.formdev:flatlaf:0.26'
 
     implementation 'com.atlassian.commonmark:commonmark:0.13.0'
 
