--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -58,7 +58,7 @@ clanPriceModifierJFormattedTextField.toolTipText=Non canon modifier which :\n* M
 usedPartsValueLabel.text=Value of used parts
 usedPartsValueJFormattedTextField.toolTipText=multiplier for value of used parts
 disallowPlanetaryAcquisitionClanCrossover.text=No Clan/Inner Sphere supply sharing
-disallowPlanetaryAcquisitionClanCrossover.toolTipText=If checked, Inner Sphere factions will not be able to find supplies on Clan-controlled worlds, and vice versa. 
+disallowPlanetaryAcquisitionClanCrossover.toolTipText=If checked, Inner Sphere factions will not be able to find supplies on Clan-controlled worlds, and vice versa.
 damagedPartsValueLabel.text=Value of damaged parts
 damagedPartsValueJFormattedTextField.toolTipText=multiplier for value of used parts
 useEasierRefitCheckBox.toolTipText=Enables a non canon faction modifier which :\n* Decreases decreases refit/customization difficulty by 1\n* Multiplies refit/customization time by 0.5
@@ -71,8 +71,8 @@ repairSystem.WarchestCustom.heavyDamageModifier=0.10
 repairSystem.WarchestCustom.cripplingDamageModifier=0.25
 usePlanetaryAcquisitions.text=Use Planet-based Acquisition System (overrides default delivery times)
 usePlanetaryAcquisitions.toolTipText=<html>Supplies will be searched for on specific planets up to a certain jump radius away, starting on current planet.<br> To find a given part, an availability roll must first succeed to identify a contact and then parts may be rolled for until a failure. <br> Planetary socio-industrial ratings can affect the target roll. <br> All delivery times are based on the number of recharges necessary (7 days), the in-system transit time at both points, and 1d6 extra days per jump.</html>
-usePlanetaryAcquisitionsVerbose.text=Use verbose reporting for planet-based acquisitions. 
-usePlanetaryAcquisitionsVerbose.toolTipText=If checked, you will see all the details of the planetary search. Usually TMI, but good for testing and understanding how it works. 
+usePlanetaryAcquisitionsVerbose.text=Use verbose reporting for planet-based acquisitions.
+usePlanetaryAcquisitionsVerbose.toolTipText=If checked, you will see all the details of the planetary search. Usually TMI, but good for testing and understanding how it works.
 chkUseFinances.text=Use Finances
 useFactionForNamesBox.text=Use chosen faction for assigned names
 useFactionForNamesBox.toolTipText=Automatically assigns random name generator based on overall faction selection
@@ -174,7 +174,7 @@ lblTechLevel.text=Maximum Tech Level:
 lblOverallRecruitBonus.text=Overall Recruitment Bonus
 panTypeRecruitBonus.title=Personnel Type Recruitment Bonus
 txtPortraitInst.text=Checked personnel types will have a random portrait selected for them upon creation. In order to use random portraits, you must place images in the data/images/portraits/Male and data/images/portraits/Female folders.
-panRandomPortait.title=Portrait Generation
+panRandomPortrait.title=Portrait Generation
 chkExtraRandom.text=Extra Randomness
 chkExtraRandom.toolTipText=If checked, an additional 1d6 will be rolled. On a 1, the skill will be lowered, and on a 6 the skill will be raised.
 chkClanBonus.text=Use clan bonuses for clan factions
@@ -254,12 +254,12 @@ chkOpforUsesVTOLs.text=Allow enemy VTOLs
 chkOpforUsesVTOLs.toolTipText=The bot does not yet have full support for VTOLs.
 chkOpforUsesAero.text=Allow enemy Aeros
 chkOpforUsesAero.toolTipText=The bot may reinforce its units with aircraft.
-lblOpforAeroLikelyhood.text=/6 Chance
-lblOpforAeroLikelyhood.toolTipText=The chance of an opfor being reinforced with aircraft.
+lblOpforAeroLikelihood.text=/6 Chance
+lblOpforAeroLikelihood.toolTipText=The chance of an opfor being reinforced with aircraft.
 chkOpforUsesLocalForces.text=Allow enemy turrets/infantry
 chkOpforUsesLocalForces.toolTipText=The bot may introduce turrets, infantry and battle armor in defensive scenarios with appropriate terrain.
-lblOpforLocalForceLikelyhood.text=/6 Chance
-lblOpforLocalForceLikelyhood.toolTipText=The chance of an opfor being reinforced with turrets, infantry or battle armor in appropriate conditions.
+lblOpforLocalForceLikelihood.text=/6 Chance
+lblOpforLocalForceLikelihood.toolTipText=The chance of an opfor being reinforced with turrets, infantry or battle armor in appropriate conditions.
 chkAdjustPlayerVehicles.text=Adjust lance weight for player vehicles
 chkAdjustPlayerVehicles.toolTipText=Vehicles deployed by the player only count half their weight to the lance weight class to compensate for enemy force generation designed to oppose player Meks.
 chkUseAero.text=Use Aerospace
@@ -282,7 +282,7 @@ btnMoveRatUp.toolTipText=Increase priority of selected RAT.
 btnMoveRatDown.text=Move down
 btnMoveRatDown.toolTipText=Decrease priority of selected RAT.
 chkIgnoreRatEra.text=Allow RAT later than campaign year.
-chkIgnoreRatEra.toolTipText=If none of the chosen collections has an appropriate RAT for the era, use the earliest that matches. 
+chkIgnoreRatEra.toolTipText=If none of the chosen collections has an appropriate RAT for the era, use the earliest that matches.
 chkVariableContractLength.text=Variable contract length
 chkVariableContractLength.toolTipText=The length of the contract is determined randomly.
 chkMercSizeLimited.text=Merc company size limits
