Adding family resources

--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -20,9 +20,15 @@ lblInjuries.text=<html><nobr><b>Injuries:</b></nobr></html>;
 lblEdge1.text=<html><nobr><b>Edge:</b></nobr></html>;
 lblEdgeAvail1.text=<html><nobr><b>Edge Available:</b></nobr></html>;
 lblSpouse1.text=<html><nobr><b>Spouse:</b></nobr></html>;
+lblFormerSpouse1.text=<html><nobr><b>Former Spouse:</b></nobr></html>;
 lblChildren1.text=<html><nobr><b>Children:</b></nobr></html>;
+lblGrandchildren1.text=<html><nobr><b>Grandchildren:</b></nobr></html>;
 lblFather1.text=<html><nobr><b>Father:</b></nobr></html>;
 lblMother1.text=<html><nobr><b>Mother:</b></nobr></html>;
+lblSiblings1.text=<html><nobr><b>Siblings:</b></nobr></html>;
+lblGrandparents1.text=<html><nobr><b>Grandparents:</b></nobr></html>;
+lblAuntsOrUncles1.text=<html><nobr><b>Aunts/Uncles:</b></nobr></html>;
+lblCousins1.text=<html><nobr><b>Cousins:</b></nobr></html>;
 missionLog.title=Mission Log
 pnlInjuries.title=Injury Report
 pnlSkills.title=Skills and Abilities
