Migrating Personnel Tab to Resources File, Part 1

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -98,6 +98,7 @@ useAdvancedMedicalBox.text=Use Advanced Medical Rules (Unofficial)
 useAdvancedMedicalBox.toolTipText=Use the Advanced Medical Rules created by Jayof9s\n(See Advanced_Medical.doc in the docs folder)
 useDylansRandomXpBox.text=Use Dylan's Random XP (Unofficial)
 useDylansRandomXpBox.toolTipText=Use Dylan's optional random XP on creation of a new person.\n(20% chance each of 0, 1, 2, 3, and randomized between 1 and 8 XP)
+minimumHitsForVees.text=Minimum number of hits for wounded crews and infantry
 useQuirksBox.text=Use Quirks
 useQuirksBox.toolTipText=Allow units to have StratOps quirks
 payForPartsBox.text=Pay For Parts
@@ -181,7 +182,7 @@ chkClanBonus.text=Use clan bonuses for clan factions
 chkClanBonus.toolTipText=If checked and the faction is a clan faction, bonuses will be added to appropriate skills to reflect clan trueborn warriors.
 lblProbAntiMek.text=Probability of anti-mek skill for conventional infantry
 spnOverallRecruitBonus.toolTipText=Add this number to the roll for primary skill levels
-spnArtyProb.toolTipText=Probability that mechwarriors, vehicle crews, and infantry have artillery skill. Only applies if separate artillery skill is in use.
+spnArtyProb.toolTipText=Probability that MechWarriors, vehicle crews, and infantry have artillery skill. Only applies if separate artillery skill is in use.
 spnSecondProb.toolTipText=Probability that person will have a randomly chosen secondary skill.
 spnTacticsGreen.toolTipText=Modifier for tactics skill for person with green primary skills. Only applies if tactics skill is in use.
 spnTacticsReg.toolTipText=Modifier for tactics skill for person with regular primary skills. Only applies if tactics skill is in use.
@@ -203,6 +204,10 @@ txtInstructionsRanks.text=You can use the table here to assign ranks for your ca
 panPhenoMW.toolTipText=Probability of a trueborn person with appropriate bonuses for each type. Does not apply to non-clan factions.
 useTougherHealing.text=Tougher Healing
 useTougherHealing.toolTipText=The healing check will be penalized for every additional hit above 2.
+useUnofficialProcreation.text=Use procreation (Unofficial)
+useUnofficialProcreation.toolTipText=This is an unofficial addition that enables procreation between members of your force in a relationship
+useUnofficialProcreationNoRelationship.text=Use procreation without a relationship (Unofficial)
+useUnofficialProcreationNoRelationship.toolTipText=This is an unofficial addition that enables procreation for female members of your force not in a relationship
 chkUseAtB.text=Use Against the Bot campaign rules
 chkUseAtB.toolTipText=Against the Bot is a set of campaign rules developed by users of the BattleTech forums.
 lblSkillLevel.text=Skill level
@@ -210,11 +215,11 @@ cbSkillLevel.toolTipText=Adjust the relative difficulty of opposing forces
 chkUseShareSystem.text=Use share system
 chkUseShareSystem.toolTipText=All personnel have a stake in the unit. This system lowers profits but can increase retention.
 chkSharesExcludeLargeCraft.text=Exclude large craft from share value
-chkSharesExcludeLargeCraft.toolTipText=When calculating payout to retirees, exclude Dropships and Jumpships from net worth when calculating share value.
+chkSharesExcludeLargeCraft.toolTipText=When calculating payout to retirees, exclude DropShips and JumpShips from net worth when calculating share value.
 chkSharesForAll.text=All personnel have shares
 chkSharesForAll.toolTipText=All combat and support personnel have shares rather than just MechWarriors
 chkTrackOriginalUnit.text=Track original unit
-chkTrackOriginalUnit.toolTipText=Mechwarriors who have their own unit when recruited will take the same unit when they go, if it is still available.
+chkTrackOriginalUnit.toolTipText=MechWarriors who have their own unit when recruited will take the same unit when they go, if it is still available.
 chkRetirementRolls.text=Do retirement/defection rolls at contract completion
 chkUseLeadership.text=Use leadership skill
 chkCustomRetirementMods.text=Customize retirement rolls
