Adding initial personnel option changes to settings

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -13,7 +13,6 @@ lblCamo.text=Camo:
 panRepair.TabConstraints.tabTitle=Repair and Maintenance
 panSupplies.TabConstraints.tabTitle=Supplies and Acquisition
 panTech.TabConstraints.tabTitle=Tech Limits
-panPersonnel.TabConstraints.tabTitle=Personnel
 panPersonnelMarket.TabConstraints.tabTitle=Personnel Market
 panNameGen.TabConstraints.tabTitle=Name and Portrait Generation
 panRank.TabConstraints.tabTitle=Rank System
@@ -51,8 +50,6 @@ logMaintenance.toolTipText=If checked, details of each maintenance check will be
 spnMaintenanceBonus.toolTipText=When checking by parts, Strat Ops applies a -1 bonus to the maintenance check target - you can change this modifier with this value
 useFactionModifiersCheckBox.text=Use faction modifiers for availability
 useFactionModifiersCheckBox.toolTipText=Enables a non canon faction modifier which :\n* Decreases clan tech availability if player plays a non clan faction\n* Decreases high tech items availability for periphery factions\n
-useRandomHitsForVees.text=Randomize the number of hits received by crews and infantry
-useRandomHitsForVees.toolTipText=If checked, the number of hits that crews and infantry receive will be randomly selected between the minimum value and 5.
 clanPriceModifierLabel.text=Clan tech price modifier
 clanPriceModifierJFormattedTextField.toolTipText=Non canon modifier which :\n* Multiplies buy/sell price of Clan units by the specified number\n* Multiplies buy/sell price of Clan components by the specified number\n
 usedPartsValueLabel.text=Value of used parts
@@ -76,6 +73,8 @@ usePlanetaryAcquisitionsVerbose.toolTipText=If checked, you will see all the det
 chkUseFinances.text=Use Finances
 useFactionForNamesBox.text=Use chosen faction for assigned names
 useFactionForNamesBox.toolTipText=Automatically assigns random name generator based on overall faction selection
+#Personnel Tab
+panPersonnel.TabConstraints.tabTitle=Personnel
 useTacticsBox.text=Use Tactics Skill as Commander Initiative Bonus
 useTacticsBox.toolTipText=Give each pilot a tactics skill that can be added to initiative using the commander initiative option in MegaMek
 useInitBonusBox.text=Use Individual Initiative Bonus
@@ -92,13 +91,47 @@ useSupportEdgeBox.text=Use Edge for Non-Combat Personnel
 useSupportEdgeBox.toolTipText=Allow non-combat personnel to use edge
 useImplantsBox.text=Allow Implants
 useImplantsBox.toolTipText=Allow personnel to have implants (e.g. Manei Domini)
+chkCapturePrisoners.text=Capture Prisoners in Scenarios
+chkCapturePrisoners.toolTipText=If checked, you will have the opportunity to capture prisoners when resolving scenarios
+prisonerStatus.text=Default Prisoner Status:
+prisonerStatus.Prisoner=Prisoner
+prisonerStatus.Bondsman=Bondsman
 altQualityAveragingCheckBox.text=Use higher-precision skill level averaging
 altQualityAveragingCheckBox.toolTipText=Where quality is determined by two skills, attempt to average by number (e.g. 8/4), \nrather than product (e.g. Regular/Green), for more precision.
 useAdvancedMedicalBox.text=Use Advanced Medical Rules (Unofficial)
 useAdvancedMedicalBox.toolTipText=Use the Advanced Medical Rules created by Jayof9s\n(See Advanced_Medical.doc in the docs folder)
 useDylansRandomXpBox.text=Use Dylan's Random XP (Unofficial)
 useDylansRandomXpBox.toolTipText=Use Dylan's optional random XP on creation of a new person.\n(20% chance each of 0, 1, 2, 3, and randomized between 1 and 8 XP)
+healWaitingPeriod.text=Days to wait between healing checks by doctors
+naturalHealWaitingPeriod.text=Days to wait for natural healing
 minimumHitsForVees.text=Minimum number of hits for wounded crews and infantry
+useRandomHitsForVees.text=Randomize the number of hits received by crews and infantry
+useRandomHitsForVees.toolTipText=If checked, the number of hits that crews and infantry receive will be randomly selected between the minimum value and 5.
+useTougherHealing.text=Tougher Healing
+useTougherHealing.toolTipText=The healing check will be penalized for every additional hit above 2.
+useTransfers.text=Log Saver - Use Reassign instead of Remove/Assign
+useTimeInService.text=Track Time In Service
+showOriginFaction.text=how Origin Faction
+randomizeOrigin.text=Randomize Origin
+originSearchRadius.text=Random Origin Search Radius
+#family
+FamilyTab.text=Family Options
+useUnofficialProcreation.text=Use procreation (Unofficial)
+useUnofficialProcreation.toolTipText=This is an unofficial addition that enables procreation between members of your force in a relationship
+useUnofficialProcreationNoRelationship.text=Use procreation without a relationship (Unofficial)
+useUnofficialProcreationNoRelationship.toolTipText=This is an unofficial addition that enables procreation for female members of your force not in a relationship
+checkMutualAncestorsDepth.text=Maximum distance of relation for marriage:
+checkMutualAncestorsDepth.toolTipText=This is the distance of relation that is used to determine if two people can marry
+useParentage.text=Display children in the person panel
+displayFamilyLevel.text=The level of relation to be displayed:
+displayFamilyLevel.toolTipText=This setting is the relation to the selected person that MekHQ will display up to
+displayFamilyLevel.ParentsChildren=Parents and Children
+displayFamilyLevel.GrandparentsGrandchildren=Grandparents and Grandchildren
+displayFamilyLevel.AuntsUnclesCousins=Aunts, Uncles, and Cousins
+logConception.text=Log Conception and Birth
+#salary
+SalaryTab.text=Salary
+#end Personnel Tab
 useQuirksBox.text=Use Quirks
 useQuirksBox.toolTipText=Allow units to have StratOps quirks
 payForPartsBox.text=Pay For Parts
@@ -202,12 +235,6 @@ infantryDontCount.toolTipText=When this option is ticked infantry will not count
 txtInstructionsRanks.title=Customizing Ranks
 txtInstructionsRanks.text=You can use the table here to assign ranks for your campaign. You can use one of the preset rank systems from the pull-down menu or you can design your own by adding and deleting ranks and editing the values in the table. You can also assign custom multipliers for salary. These multipliers do not need to take into account the officer multiplier which is addressed elsewhere. \n\nWARNING: If you change the number of ranks in an existing campaign, you will have to manually adjust the ranks of all personnel.
 panPhenoMW.toolTipText=Probability of a trueborn person with appropriate bonuses for each type. Does not apply to non-clan factions.
-useTougherHealing.text=Tougher Healing
-useTougherHealing.toolTipText=The healing check will be penalized for every additional hit above 2.
-useUnofficialProcreation.text=Use procreation (Unofficial)
-useUnofficialProcreation.toolTipText=This is an unofficial addition that enables procreation between members of your force in a relationship
-useUnofficialProcreationNoRelationship.text=Use procreation without a relationship (Unofficial)
-useUnofficialProcreationNoRelationship.toolTipText=This is an unofficial addition that enables procreation for female members of your force not in a relationship
 chkUseAtB.text=Use Against the Bot campaign rules
 chkUseAtB.toolTipText=Against the Bot is a set of campaign rules developed by users of the BattleTech forums.
 lblSkillLevel.text=Skill level
@@ -322,8 +349,6 @@ spnStartGameDelay.text=Delay timer
 spnStartGameDelay.toolTipText=Number of milliseconds to wait before sending another unit
 chkContractMarketReportRefresh.text=Display a report when contract market refreshes
 chkUnitMarketReportRefresh.text=Display a report when unit market refreshes
-chkCapturePrisoners.text=Capture Prisoners in Scenarios
-chkCapturePrisoners.toolTipText=If checked, you will have the opportunity to capture prisoners when resolving scenarios
 chkAssignPortraitOnRoleChange.text=Automatically assign portrait on role change
 chkAssignPortraitOnRoleChange.toolTipText=With this enabled, a person without a portrait will automatically gain a random portrait when their primary role is switched to one of those selected below
 chkShowHistoricalDailyReport.text=Temporarily retain daily log history
