Added Options for Relationship Depth and Family Display Level

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -111,7 +111,7 @@ useTougherHealing.text=Tougher Healing
 useTougherHealing.toolTipText=The healing check will be penalized for every additional hit above 2.
 useTransfers.text=Log Saver - Use Reassign instead of Remove/Assign
 useTimeInService.text=Track Time In Service
-showOriginFaction.text=how Origin Faction
+showOriginFaction.text=Show Origin Faction
 randomizeOrigin.text=Randomize Origin
 originSearchRadius.text=Random Origin Search Radius
 #family
@@ -120,12 +120,12 @@ useUnofficialProcreation.text=Use procreation (Unofficial)
 useUnofficialProcreation.toolTipText=This is an unofficial addition that enables procreation between members of your force in a relationship
 useUnofficialProcreationNoRelationship.text=Use procreation without a relationship (Unofficial)
 useUnofficialProcreationNoRelationship.toolTipText=This is an unofficial addition that enables procreation for female members of your force not in a relationship
-checkMutualAncestorsDepth.text=Maximum distance of relation for marriage:
+checkMutualAncestorsDepth.text=Minimum distance of relation for marriage to be possible:
 checkMutualAncestorsDepth.toolTipText=This is the distance of relation that is used to determine if two people can marry
 useParentage.text=Display children in the person panel
 displayFamilyLevel.text=The level of relation to be displayed:
-displayFamilyLevel.toolTipText=This setting is the relation to the selected person that MekHQ will display up to
-displayFamilyLevel.ParentsChildren=Parents and Children
+displayFamilyLevel.toolTipText=This setting is the relation to the selected person that MekHQ will display up to, including the previous levels\n(higher levels require more processing when loading a person)
+displayFamilyLevel.ParentsChildren=Parents, Siblings, and Children
 displayFamilyLevel.GrandparentsGrandchildren=Grandparents and Grandchildren
 displayFamilyLevel.AuntsUnclesCousins=Aunts, Uncles, and Cousins
 logConception.text=Log Conception and Birth
