--- a/MekHQ/resources/mekhq/resources/NewPlanetaryEventDialog.properties
+++ b/MekHQ/resources/mekhq/resources/NewPlanetaryEventDialog.properties
@@ -59,6 +59,7 @@ save.text=Save
 setDay.tooltip=Set Event Day
 shortName.text=Short name
 socioindustrial.text=Socio-industrial index
+#note that the temperature displayed below might not work as intended, and the unicode "\u00B0" should replace the degree symbol in that case
 temperature.combined.format=%d°C
 temperature.text=Average equatorial temperature
 undefined.text=(undefined)
