--- a/MekHQ/resources/mekhq/resources/NewPlanetaryEventDialog.properties
+++ b/MekHQ/resources/mekhq/resources/NewPlanetaryEventDialog.properties
@@ -60,7 +60,7 @@ setDay.tooltip=Set Event Day
 shortName.text=Short name
 socioindustrial.text=Socio-industrial index
 #note that the temperature displayed below might not work as intended, and the unicode "\u00B0" should replace the degree symbol in that case
-temperature.combined.format=%d°C
+temperature.combined.format=%d\u00B0C
 temperature.text=Average equatorial temperature
 undefined.text=(undefined)
 water.combined.format=%d%%
