--- a/MekHQ/resources/mekhq/resources/NewPlanetaryEventDialog.properties
+++ b/MekHQ/resources/mekhq/resources/NewPlanetaryEventDialog.properties
@@ -59,7 +59,7 @@ save.text=Save
 setDay.tooltip=Set Event Day
 shortName.text=Short name
 socioindustrial.text=Socio-industrial index
-#note that the temperature displayed below might not work as intended, and the unicode "\u00B0" should replace the degree symbol in that case
+#The unicode "\u00B0" is being used to replace the degree symbol because of display issues arising from the degree symbol not being found during compilation
 temperature.combined.format=%d\u00B0C
 temperature.text=Average equatorial temperature
 undefined.text=(undefined)
