Localizing pregnancy options

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -99,9 +99,9 @@ prisonerStatus.Bondsman=Bondsman
 altQualityAveragingCheckBox.text=Use higher-precision skill level averaging
 altQualityAveragingCheckBox.toolTipText=Where quality is determined by two skills, attempt to average by number (e.g. 8/4), \nrather than product (e.g. Regular/Green), for more precision.
 useAdvancedMedicalBox.text=Use Advanced Medical Rules (Unofficial)
-useAdvancedMedicalBox.toolTipText=Use the Advanced Medical Rules created by Jayof9s\n(See Advanced_Medical.doc in the docs folder)
+useAdvancedMedicalBox.toolTipText=Use the Advanced Medical Rules created by Jayof9s \n(See Advanced_Medical.doc in the docs folder)
 useDylansRandomXpBox.text=Use Dylan's Random XP (Unofficial)
-useDylansRandomXpBox.toolTipText=Use Dylan's optional random XP on creation of a new person.\n(20% chance each of 0, 1, 2, 3, and randomized between 1 and 8 XP)
+useDylansRandomXpBox.toolTipText=Use Dylan's optional random XP on creation of a new person. \n(20% chance each of 0, 1, 2, 3, and randomized between 1 and 8 XP)
 healWaitingPeriod.text=Days to wait between healing checks by doctors
 naturalHealWaitingPeriod.text=Days to wait for natural healing
 minimumHitsForVees.text=Minimum number of hits for wounded crews and infantry
@@ -118,13 +118,17 @@ originSearchRadius.text=Random Origin Search Radius
 FamilyTab.text=Family Options
 useUnofficialProcreation.text=Use procreation (Unofficial)
 useUnofficialProcreation.toolTipText=This is an unofficial addition that enables procreation between members of your force in a relationship
+chanceProcreation.text=Percent chance of a fitting female procreating per day:
+chanceProcreation.toolTipText=This is the percent chance per day that a female member of your force in a relationship will have a baby when not deployed.
 useUnofficialProcreationNoRelationship.text=Use procreation without a relationship (Unofficial)
 useUnofficialProcreationNoRelationship.toolTipText=This is an unofficial addition that enables procreation for female members of your force not in a relationship
+chanceProcreationNoRelationship.text=Percent chance of a fitting female procreating per day (no relationship):
+chanceProcreationNoRelationship.toolTipText=This is the percent chance per day that a female member of your force not in a relationship will have a baby when not deployed.
 checkMutualAncestorsDepth.text=Minimum distance of relation for marriage to be possible:
 checkMutualAncestorsDepth.toolTipText=This is the distance of relation that is used to determine if two people can marry
 useParentage.text=Display children in the person panel
 displayFamilyLevel.text=The level of relation to be displayed:
-displayFamilyLevel.toolTipText=This setting is the relation to the selected person that MekHQ will display up to, including the previous levels\n(higher levels require more processing when loading a person)
+displayFamilyLevel.toolTipText=This setting is the relation to the selected person that MekHQ will display up to, including the previous levels \n(higher levels require more processing when loading a person)
 displayFamilyLevel.ParentsChildren=Parents, Siblings, and Children
 displayFamilyLevel.GrandparentsGrandchildren=Grandparents and Grandchildren
 displayFamilyLevel.AuntsUnclesCousins=Aunts, Uncles, and Cousins
