Adding former spouse tracking

--- a/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
@@ -32,7 +32,9 @@ changeRankSystem.text=Change Rank System
 changeSalary.text=Change Salary (-1 to remove custom salary)
 changeSecondaryDesignation.text=Change Secondary Designation
 changeSecondaryRole.text=Change Secondary Role
-changeSpouse.text=Choose Spouse (Mate)
+chooseSpouse.text=Choose Spouse (Mate)
+spouseMenuMale.text=Male
+spouseMenuFemale.text=Female
 changeStatus.text=Change Status
 commander.text=Commander
 confirmRemove.format=Do you really want to remove %s?
