Splitting names in Surname and Given Name in MekHQ

--- a/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
@@ -84,7 +84,9 @@ maintenanceTimeDesc.format=%s (%d minutes/day)
 marriageBondsmanDesc.format=Bondsman %s, %d, %s
 marriageNoNameChange.text=No name change
 marriageHyphenateSpouse.text=Spouse hyphenates surname with yours
+marriageBothHyphenateSpouse.text=Both hyphenate your spouse's surname with yours
 marriageHyphenateYourself.text=Hyphenate your surname with spouse's
+marriageBothHyphenateYourself.text=Both hyphenate your surname with your spouse's
 marriagePartnerDesc.format=%s, %d, %s
 marriagePrisonerDesc.format=Prisoner %s, %d, %s
 marriageRenameSpouse.text=Spouse takes your surname
