--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -124,6 +124,10 @@ useUnofficialProcreationNoRelationship.text=Use procreation without a relationsh
 useUnofficialProcreationNoRelationship.toolTipText=This is an unofficial addition that enables procreation for female members of your force not in a relationship
 chanceProcreationNoRelationship.text=Percent chance of a fitting female procreating per day (no relationship):
 chanceProcreationNoRelationship.toolTipText=This is the percent chance per day that a female member of your force not in a relationship will have a baby when not deployed.
+babySurnameStyle.text=Which parent's surname should the baby take:
+babySurnameStyle.toolTipText=This is the parent whose surname a baby will take. If Father is selected and there is no father, the baby will take the mother's surname.
+babySurnameStyle.Mother=Mother
+babySurnameStyle.Father=Father
 checkMutualAncestorsDepth.text=Minimum distance of relation for marriage to be possible:
 checkMutualAncestorsDepth.toolTipText=This is the distance of relation that is used to determine if two people can marry
 useParentage.text=Display children in the person panel
