--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -20,7 +20,7 @@ lblInjuries.text=<html><nobr><b>Injuries:</b></nobr></html>;
 lblEdge1.text=<html><nobr><b>Edge:</b></nobr></html>;
 lblEdgeAvail1.text=<html><nobr><b>Edge Available:</b></nobr></html>;
 lblSpouse1.text=<html><nobr><b>Spouse:</b></nobr></html>;
-lblFormerSpouse1.text=<html><nobr><b>Former Spouse:</b></nobr></html>;
+lblFormerSpouses1.text=<html><nobr><b>Former Spouse:</b></nobr></html>;
 lblChildren1.text=<html><nobr><b>Children:</b></nobr></html>;
 lblGrandchildren1.text=<html><nobr><b>Grandchildren:</b></nobr></html>;
 lblFather1.text=<html><nobr><b>Father:</b></nobr></html>;
