--- a/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
+++ b/MekHQ/resources/mekhq/resources/PersonViewPanel.properties
@@ -6,7 +6,7 @@ lblStatus1.text=<html><nobr><b>Status:</b></nobr></html>;
 lblOrigin1.text=<html><nobr><b>Origin:</b></nobr></html>;
 lblRecruited1.text=<html><nobr><b>Recruited:</b></nobr></html>;
 lblTimeServed1.text=<html><nobr><b>Time in Service:</b></nobr></html>;
-lblDuedate1.text=<html><nobr><b>Due Date:</b></nobr></html>;
+lblDueDate1.text=<html><nobr><b>Due Date:</b></nobr></html>;
 lblGun1.text=<html><nobr><b>Gunnery:</b></nobr></html>;
 lblPilot1.text=<html><nobr><b>Piloting:</b></nobr></html>;
 lblArty1.text=<html><nobr><b>Artillery:</b></nobr></html>;
