Adding portraits Male and Female folders to git

--- a/MekHQ/.gitignore
+++ b/MekHQ/.gitignore
@@ -2,6 +2,8 @@
 /logs/
 /data/mechfiles/units.cache
 /data/mechfiles/customs/
+/data/images/portraits/Male
+/data/images/portraits/Female
 /savegames/
 /mmconf/clientsettings.xml
 /mmconf/gameoptions.xml
