--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -116,6 +116,16 @@ randomizeOrigin.text=Randomize Origin
 originSearchRadius.text=Random Origin Search Radius
 #family
 FamilyTab.text=Family Options
+useRandomMarriages.text=
+useRandomMarriages.toolTipText=
+minimumMarriageAge.text=
+minimumMarriageAge.toolTipText=
+marriageAgeRange.text=
+marriageAgeRange.toolTipText=
+useRandomSameSexMarriages.text=
+useRandomSameSexMarriages.toolTipText=
+checkMutualAncestorsDepth.text=Minimum distance of relation for marriage to be possible:
+checkMutualAncestorsDepth.toolTipText=This is the distance of relation that is used to determine if two people can marry
 useUnofficialProcreation.text=Use procreation (Unofficial)
 useUnofficialProcreation.toolTipText=This is an unofficial addition that enables procreation between members of your force in a relationship
 chanceProcreation.text=Percent chance of a fitting female procreating per day:
@@ -124,19 +134,22 @@ useUnofficialProcreationNoRelationship.text=Use procreation without a relationsh
 useUnofficialProcreationNoRelationship.toolTipText=This is an unofficial addition that enables procreation for female members of your force not in a relationship
 chanceProcreationNoRelationship.text=Percent chance of a fitting female procreating per day (no relationship):
 chanceProcreationNoRelationship.toolTipText=This is the percent chance per day that a female member of your force not in a relationship will have a baby when not deployed.
+displayExpectedDueDate.text=Display expected due date:
+displayExpectedDueDate.toolTipText=This displays an expected due date instead of the actual date the baby will be delivered on the mother's personnel sheet.
+logConception.text=Log Conception and Birth in Personnel and Medical Logs:
 babySurnameStyle.text=Which parent's surname should the baby take:
 babySurnameStyle.toolTipText=This is the parent whose surname a baby will take. If Father is selected and there is no father, the baby will take the mother's surname.
 babySurnameStyle.Mother=Mother
 babySurnameStyle.Father=Father
-checkMutualAncestorsDepth.text=Minimum distance of relation for marriage to be possible:
-checkMutualAncestorsDepth.toolTipText=This is the distance of relation that is used to determine if two people can marry
 useParentage.text=Display children in the person panel
 displayFamilyLevel.text=The level of relation to be displayed:
 displayFamilyLevel.toolTipText=This setting is the relation to the selected person that MekHQ will display up to, including the previous levels \n(higher levels require more processing when loading a person)
 displayFamilyLevel.ParentsChildren=Parents, Siblings, and Children
 displayFamilyLevel.GrandparentsGrandchildren=Grandparents and Grandchildren
 displayFamilyLevel.AuntsUnclesCousins=Aunts, Uncles, and Cousins
-logConception.text=Log Conception and Birth
+useRandomDeaths.text=
+useRandomDeaths.toolTipText=
+keepMarriedNameUponSpouseDeath=Keep married name upon spouse death:
 #salary
 SalaryTab.text=Salary
 #end Personnel Tab
