--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -118,12 +118,16 @@ originSearchRadius.text=Random Origin Search Radius
 FamilyTab.text=Family Options
 useRandomMarriages.text=
 useRandomMarriages.toolTipText=
+chanceRandomMarriages.text=
+chanceRandomMarriages.toolTipText=
 minimumMarriageAge.text=
 minimumMarriageAge.toolTipText=
 marriageAgeRange.text=
 marriageAgeRange.toolTipText=
 useRandomSameSexMarriages.text=
 useRandomSameSexMarriages.toolTipText=
+chanceRandomSameSexMarriages.text=
+chanceRandomSameSexMarriages.toolTipText=
 checkMutualAncestorsDepth.text=Minimum distance of relation for marriage to be possible:
 checkMutualAncestorsDepth.toolTipText=This is the distance of relation that is used to determine if two people can marry
 useUnofficialProcreation.text=Use procreation (Unofficial)
@@ -149,7 +153,7 @@ displayFamilyLevel.GrandparentsGrandchildren=Grandparents and Grandchildren
 displayFamilyLevel.AuntsUnclesCousins=Aunts, Uncles, and Cousins
 useRandomDeaths.text=
 useRandomDeaths.toolTipText=
-keepMarriedNameUponSpouseDeath=Keep married name upon spouse death:
+keepMarriedNameUponSpouseDeath.text=Keep married name upon spouse death:
 #salary
 SalaryTab.text=Salary
 #end Personnel Tab
